First changes made to add about and blog page to the site

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,10 +10,12 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
-    <a href="/">Home</a>
+  <a href="/">Home</a>
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
-		<h1>Brigalow Astro Site</h1>
+		<h1>About Brigalow Astro Site</h1>
+    <h2>Building with some of the Syft Money content</h2>
+    <p>I am working on the Astro intro tutuorial</p>
+  
 	</body>
 </html>
