--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,10 +10,12 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
-    <a href="/">Home</a>
+  <a href="/">Home</a>
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
-		<h1>Brigalow Astro Site</h1>
+		<h1>Brigalow Astro Site Blog</h1>
+    <h2>Blogging using Astro </h2>
+    <p>I am blogging on the Astro intro tutuorial</p>
+    <p>This is where I will post my journey with Astro</p>
 	</body>
 </html>
