--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,7 @@
 ---
+import '../styles/global.css';
 
+const pageTitle = 'My Astro Learning Blog'
 ---
 
 <html lang="en">
@@ -8,14 +10,20 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
   <a href="/">Home</a>
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
-		<h1>Brigalow Astro Site Blog</h1>
+		<h1>{pageTitle}</h1>
     <h2>Blogging using Astro </h2>
     <p>I am blogging on the Astro intro tutuorial</p>
     <p>This is where I will post my journey with Astro</p>
-	</body>
+
+    <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
+  </body>
 </html>
