--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 const pageTitle = 'My Astro Learning Blog'
@@ -12,10 +14,9 @@ const pageTitle = 'My Astro Learning Blog'
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 	</head>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
+    <Header />
 		<h1>{pageTitle}</h1>
+
     <h2>Blogging using Astro </h2>
     <p>I am blogging on the Astro intro tutuorial</p>
     <p>This is where I will post my journey with Astro</p>
@@ -25,5 +26,6 @@ const pageTitle = 'My Astro Learning Blog'
       <li><a href="/posts/post-2/">Post 2</a></li>
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
+      <Footer />
   </body>
 </html>
