--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,7 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = 'About Brigalow Page'
 
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
-
-const pageTitle = 'About Brigalow'
 
 const identity = {
   firstName: "Brigalow",
@@ -23,17 +20,8 @@ const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase"
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-    <html lang="en">
-
-    <style define:vars={{skillColor, fontWeight, textCase}}>
+<BaseLayout pageTitle={pageTitle}>
+  <style is:global define:vars={{skillColor, fontWeight, textCase}}>
       h1 {
         color: purple;
         font-size: 4rem;
@@ -44,12 +32,7 @@ const textCase = "uppercase"
         text-transform: var(--textCase);
       }
     </style>
-
-  </head>
-    <Header />
-		<h1>{pageTitle}</h1>
-
-    <h2>Building with some of the Syft Money content</h2>
+<h2>Building with some of the Syft Money content</h2>
     <p>I am working on the Astro intro tutuorial</p>
     <p>Here are a few facts about me:</p>
     <ul>
@@ -68,7 +51,9 @@ const textCase = "uppercase"
 {finished && <p>I finished this tutorial!</p>}
 
 {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
-    <Footer />
+</BaseLayout>
 
-	</body>
-</html>
+
+
+
+
