--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,31 +1,20 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
-
-const pageTitle = 'My Astro Learning Blog'
+import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+const pageTitle = 'Brigalow Blog Page'
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-    <Header />
-		<h1>{pageTitle}</h1>
-
-    <h2>Blogging using Astro </h2>
+<BaseLayout pageTitle={pageTitle}>
+<h2>Blogging using Astro </h2>
     <p>I am blogging on the Astro intro tutuorial</p>
     <p>This is where I will post my journey with Astro</p>
 
     <ul>
-      <li><a href="/posts/post-1/">Post 1</a></li>
-      <li><a href="/posts/post-2/">Post 2</a></li>
-      <li><a href="/posts/post-3/">Post 3</a></li>
+           {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
     </ul>
-      <Footer />
-  </body>
-</html>
+</BaseLayout>
+
+
+
+
+
